fix: scrollbar z-index 추가

--- a/src/css/pages/chartpage.css
+++ b/src/css/pages/chartpage.css
@@ -99,6 +99,7 @@
   position: fixed;
   right: 0px;
   background-color: #D7D7D7;
+  z-index: 10;
 }
 
 #scroll-indicator-bar {
